--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "djangorestframework (>=3.16.1,<4.0.0)",
     "psycopg[binary] (>=3.2.12,<4.0.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
+    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
 ]
 
 [tool.poetry]
