--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
     "django-filter (>=25.2,<26.0)",
     "puremagic (>=1.30,<2.0)",
+    "python-dateutil (>=2.9.0.post0,<3.0.0)",
 ]
 
 [tool.poetry]
